modify: 修改布局样式

--- a/src/components/flow/designer/style/flow-designer.scss
+++ b/src/components/flow/designer/style/flow-designer.scss
@@ -19,7 +19,10 @@ $primary-color: #409EFF;
   height: 36px;
   line-height: 36px;
   border-bottom: 2px solid #e4e7ed;
-  text-align: right;
+  padding: 0 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .header-option-button {
