--- a/src/components/flow/designer/style/flow-area.less
+++ b/src/components/flow/designer/style/flow-area.less
@@ -1,4 +1,4 @@
-$active-color: #409EFF;
+@active-color: #409EFF;
 
 .btn-wrapper-simple {
     height: 24px !important;
@@ -51,19 +51,19 @@ $active-color: #409EFF;
 
 .auxiliary-line-x {
     position: absolute;
-    border: 0.5px solid $active-color;
+    border: 0.5px solid @active-color;
     width: 100%;
     z-index: 9999;
 }
 .auxiliary-line-y {
     position: absolute;
-    border: 0.5px solid $active-color;
+    border: 0.5px solid @active-color;
     height: 100%;
     z-index: 9999;
 }
 
 .link-active {
-    outline: 2px dashed $active-color;
+    outline: 2px dashed @active-color;
 }
 
 .container-scale {
