perf: 优化目录结构

--- a/src/components/flow-design/assets/style/flow-area.less
+++ b/src/components/flow-design/assets/style/flow-area.less
@@ -42,12 +42,8 @@
   transition: transform 0.5s ease 0s, transform-origin 0.5s ease 0s;
 
   &.grid {
-    background: url("~@/assets/images/grid-bg.jpg") repeat left top;
+    background: url("../images/grid-bg.jpg") repeat left top;
     background-size: 60px 60px;
-  }
-
-  &.canScale {
-    cursor: url(~@/assets/images/search.png), default;
   }
 
   &.canDrag {
@@ -55,7 +51,7 @@
   }
 
   &.canMultiple {
-    cursor: url(~@/assets/images/multip-pointer.png), default;
+    cursor: url("../images/multip-pointer.png"), default;
   }
 }
 
